# waybar-pomodoro

./: Cargo.toml  LICENSE  Makefile  README.md
config/: waybar-module.jsonc  waybar-style.css
scripts/: patch-waybar.py
src/: main.rs
