[package]
name = "waybar-pomodoro"
version = "0.1.0"
edition = "2021"
description = "A Pomodoro timer widget for Waybar"

[[bin]]
name = "waybar-pomodoro"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
